--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
@@ -54,7 +53,7 @@
             <div class="line2"></div>
             <div class="line3"></div>
           </div>
-        </div>
+        </div> 
         <script src='mobile-navbar.js'></script>
           <ul class="nav-list">
             <li><a href="parque.html" style="color: #F4EBD0;">HOME</a></li>
@@ -68,6 +67,36 @@
           </div>
         </div>
       </header>
+      <br>
+      <br>
+      <br>
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://mail.google.com/mail/u/0?ui=2&ik=f0494ca10c&attid=0.1.1&permmsgid=msg-f:1775108943900277354&th=18a2742df6cb7a6a&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ93Dx4gCxvljbIdkWh_X-WPlh3lH502noM4COsLbVRFzNvjt-YNxoQiLncrH6ra2TIxXicY6naSGCyFoKxce2QHXb9-JHFZ21nGNr9WR6Izd04ooyqDpuGgM-M&disp=emb" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <br>
+      <br>
+      <br>
+      <div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.2681181318085!2d-46.521149526058316!3d-23.66636786545564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce69d619d62a27%3A0x41f94d2be4af4536!2sEscola%20SENAI%20A.%20Jacob%20Lafer!5e0!3m2!1spt-BR!2sbr!4v1692876235071!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
+      </div>
       <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&display=swap');
@@ -230,8 +259,9 @@ nav .nav-list a:hover:before {
       transform: translateX(0);
   }
 }
+ .mapa{
+  border-radius: 20px;
+ }
       </style>
 </body>
 </html>
-=======
->>>>>>> 6f5dca9444edb558c6fa9ed011e568b87e0e7be1
