--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
@@ -58,7 +57,16 @@
         <script src='mobile-navbar.js'></script>
           <ul class="nav-list">
             <li><a href="parque.html" style="color: #F4EBD0;">HOME</a></li>
-            <li><a href="atracoes.html" style="color: #F4EBD0;">ATRAÇÕES</a></li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" style="color: #F4EBD0;">LIVROS</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Separated link</a></li>
+                </ul>
+              </li>
             <li><a href="contato.html" style="color: #F4EBD0;">CONTATO</a></li>
             <li><a href="informacoes.html" style="color: #F4EBD0;">SAIBA MAIS</a></li>
           </ul>
@@ -233,5 +241,3 @@ nav .nav-list a:hover:before {
       </style>
 </body>
 </html>
-=======
->>>>>>> 6f5dca9444edb558c6fa9ed011e568b87e0e7be1
