--- a/index1.html
+++ b/index1.html
@@ -111,18 +111,24 @@ body {
   #horario ul li span {
     font-weight: bold;
   }
+  a{
+    color: #B68D40;
+  }
+  .nav-link{
+    color: #B68D40;
+  }
 </style>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar scroll</a>
+          <a class="navbar-brand" href="#">Biblioteca</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll justify-content-center" style="--bs-scroll-height: 100px;">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                <a class="nav-link" aria-current="page" href="#">HOME</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -157,9 +163,6 @@ body {
           <div class="carousel-item">
             <img src="../biblioteca/img/fUNCIONAMENTO.png" class="d-block w-100" alt="...">
           </div>
-          <div class="carousel-item">
-            <img src="../biblioteca/img/img3.jpg" class="d-block w-100" alt="...">
-          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -171,6 +174,8 @@ body {
         </button>
       </div>
       <section id="livros">
+        <br>
+        <br>
         <h2>ATRAÇÕES</h2>
         <div class="jtbanners">
           <div class="img1"><a href="index2.html"><img src="img/BANNER1.png"></a></div>
