--- a/index1.html
+++ b/index1.html
@@ -200,7 +200,7 @@ body {
           <br>
           <br>
           <div class="ratio ratio-16x9">
-            <iframe src="https://www.youtube.com/embed/cS9-Y260KQQ?si=3nfkCeLtQt-m-Lyh" width="100px"></iframe>
+            <iframe width="100" src="https://www.youtube.com/embed/vvKUuFk_uWI?si=JLKrOg_mLusxN_E8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </form>
       </section>
@@ -229,7 +229,7 @@ body {
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     <!-- Left -->
     <div class="me-5 d-none d-lg-block">
-      <span>Get connected with us on social networks:</span>
+      <span></span>
     </div>
     <!-- Left -->
 
@@ -267,11 +267,10 @@ body {
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>Biblioteca
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
+            Explore nossa vasta coleção de livros e recursos criativos
           </p>
         </div>
         <!-- Grid column -->
@@ -280,20 +279,12 @@ body {
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Products
+            Produtos
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="#!" class="text-reset">Livros</a>
           </p>
-          <p>
-            <a href="#!" class="text-reset">React</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Vue</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Laravel</a>
-          </p>
+        
         </div>
         <!-- Grid column -->
 
@@ -301,19 +292,19 @@ body {
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
+            CATEGORIAS
           </h6>
           <p>
-            <a href="#!" class="text-reset">Pricing</a>
+            <a href="#livros" class="text-reset">literatura brasileira</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Settings</a>
+            <a href="#livros1" class="text-reset">literatura estrangeira</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Orders</a>
+            <a href="#livros2" class="text-reset">literatura infantojuvenil</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Help</a>
+            <a href="#livros3" class="text-reset">livros didaticos</a>
           </p>
         </div>
         <!-- Grid column -->
