--- a/index2.html
+++ b/index2.html
@@ -20,6 +20,16 @@
   footer{
     width: 100%;
   }
+  .btn-primary {
+        background: linear-gradient(to bottom, #B68D40, #A5722A);
+        border-color: #A5722A;
+    }
+
+    /* Estilo para o botão Detalhes ao passar o mouse */
+    .btn-primary:hover {
+        background: linear-gradient(to bottom, #000000, #ffffff);
+        border-color: #A5722A;
+    }
 </style>
 <body><nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -80,7 +90,7 @@
                         <div class="card-body">
                             <h5 class="card-title">A Paixão Segundo G.H. (1964), Clarice Lispector</h5>
                             <p class="card-text">Clarice Lispector sempre esteve focada na busca pelo “eu” em suas obras. Em A Paixão Segundo G.H. ela encontra talvez a melhor fórmula para tratar do assunto. O livro começa e termina em reticências, sendo que os capítulos sempre começam com a mesma frase que o capítulo anterior terminou. Esta estrutura estabelece uma ideia de continuidade muito elogiada em seu trabalho.</p>
-                            <a href="#" class="btn btn-primary">Detalhes</a>
+                            <a href="index4.html" class="btn btn-primary">Detalhes</a>
                         </div>
                     </div>
                 </div>
