--- a/index1.html
+++ b/index1.html
@@ -117,6 +117,16 @@ body {
   .nav-link{
     color: #B68D40;
   }
+  .btn-primary {
+        background: linear-gradient(to bottom, #B68D40, #A5722A);
+        border-color: #A5722A;
+    }
+
+    /* Estilo para o botão Detalhes ao passar o mouse */
+    .btn-primary:hover {
+        background: linear-gradient(to bottom, #000000, #ffffff);
+        border-color: #A5722A;
+    }
 </style>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -208,7 +218,7 @@ body {
       <section id="termos">
         <h2>Termos de Uso</h2>
         <p>Leia atentamente os termos de uso da biblioteca antes de utilizar nossos serviços.</p>
-        <a href="#">Ler Termos de Uso</a>
+        <a href="index3.html">Ler Termos de Uso</a>
       </section>
       </section>
       <section id="horario">
