--- a/index1.html
+++ b/index1.html
@@ -186,7 +186,7 @@ body {
       <section id="livros">
         <br>
         <br>
-        <h2>ATRAÇÕES</h2>
+        <h2>CATEGORIAS</h2>
         <div class="jtbanners">
           <div class="img1"><a href="index2.html"><img src="img/BANNER1.png"></a></div>
           <section id="livros1">
